# CrystalBall_PhotoEditAI_Mobile

./: .gitignore
CrystalBall_Photoedit/app/: CMakeLists.txt  build.gradle
CrystalBall_Photoedit/app/src/main/: AndroidManifest.xml
CrystalBall_Photoedit/app/src/main/assets/: AllCerts.cert
CrystalBall_Photoedit/app/src/main/cpp/: detect.cpp  detect.h  export_jni.cpp  main.cpp  main.h  recognize.cpp  recognize.h
CrystalBall_Photoedit/app/src/main/res/color/: color_hsv_menu_text.xml  color_photo_numbers.xml  color_radio_text.xml
CrystalBall_Photoedit/app/src/main/res/drawable/: btn_accept.xml  btn_back.xml  btn_background_blur.xml  btn_bgadd.xml  btn_cancel.xml  btn_date.xml  btn_drawer.xml  btn_dwn_arrow.xml  btn_effect.xml  btn_eraser.xml  btn_face_change.xml  btn_facechange.xml  btn_fv_eraser.xml  btn_fvedit.xml  btn_fverase.xml  btn_mask_edit.xml  btn_open_top.xml  btn_png_save.xml  btn_preview.xml  btn_reset_round.xml  btn_softeffect1.xml  btn_softeffect2.xml  btn_softeffect3.xml  btn_softeffect4.xml  btn_softfocus_preview.xml  btn_themephoto_add.xml  btn_undo.xml  btn_up_arrow.xml  drawer_btn_back.xml  drawer_open_btn.xml  face_focus.xml  myprogress.xml  oval_btn_back.xml  oval_btn_back_1.xml  oval_btn_back_2.xml  oval_btn_back_3.xml  oval_btn_back_4.xml  oval_btn_back_5.xml  oval_btn_back_6.xml  oval_btn_facechange_back.xml  (+35 more)
CrystalBall_Photoedit/app/src/main/res/drawable-hdpi/: action_button.xml  bg_edittext.xml  bg_textview.xml  btn_ads_anim.xml  btn_qr_anim.xml  color_action_button.xml  scan_flashlight.xml  scan_history.xml  seekbar_bg.xml  seekbar_style.xml  xml_button_trans_rect_bg_selector.xml
Engine_src/: FaceSwapper.cpp  (+8 more)
(+213 files in other folders)
